# litellm-langfuse-gateway

./: .editorconfig  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.redis.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  live-smoke.yml
config/: litellm_config.yaml
config/llm/: metadata-contract.schema.json  model-aliases.yaml
config/llm/environments/: development.yaml  production.yaml  staging.yaml
docs/adr/: 0001-classic-langfuse-callback.md  0002-yaml-model-registry-sot.md  0003-fallbacks-off-by-default.md  0004-redis-service-not-shared-limits.md  0005-environments-yaml-docs-only.md  0006-alias-authority-chain.md  0007-langfuse-native-dimensions.md  README.md
docs/design/: slice-int-116-reconcile-cost.md  slice-int-117-alias-equality.md
docs/evidence/: MILESTONE-REPORT.md  README.md  failure-matrix.md
docs/evidence/audits/: 2026-07-19-integrity-candidate-ledger-v2.yaml  2026-07-19-integrity-candidate-ledger.yaml  2026-07-19-integrity-parallel-report-v2.html  2026-07-19-integrity-parallel-report.html
docs/evidence/spikes/: 2026-07-19-int-001-redis-decision.md  2026-07-19-int-001-redis-pin-compat.md
docs/evidence/templates/: cost-recon.md  failure-run.md  langfuse-correlation.md  provider-smoke.md
docs/llm-platform/: app-wiring.md  application-migration.md  architecture.md  call-attribution.md  cost-reconciliation.md  incident-recovery.md  langfuse-dashboards.md  operating-guide.md  privacy-and-retention.md  provider-call-inventory.md  provider-compatibility-matrix.md  provider-onboarding.md
docs/superpowers/plans/: 2026-07-17-unified-litellm-langfuse-gateway.md
examples/: python_client.py  reference_workflow.py  ts_client.ts
infra/llm-gateway/: .env.app.example  .env.example  README.md  compose.redis.yaml  compose.staging.yaml  compose.yaml  litellm-config.yaml  start-gateway.ps1  upgrade-notes.md
infra/llm-gateway/k8s/: README.md
observability/langfuse/: README.md
observability/langfuse/dashboards/: README.md
observability/langfuse/evidence/: README.md
scripts/: __init__.py  generate_secrets.py  healthcheck.py  validate_config.py
src/llg/: __init__.py  __main__.py  cli.py  compose_ops.py  generate_secrets.py  healthcheck.py  keys.py  paths.py  reconcile_cost.py  validate_config.py
src/llm_client/: __init__.py  client.py  errors.py  langfuse_metadata.py  metadata.py  proxy_url.py
tests/: test_generate_secrets.py  test_validate_config.py
tests/fixtures/cost_recon/: outside.yaml  within.yaml
tests/integration/: test_compose_env_origin.py  test_failure_modes_live.py  test_gateway_health.py  test_langfuse_export.py  test_litellm_langfuse_pin.py  test_trace_grouping.py  test_virtual_key_access.py
tests/runtime_pin/: README.md  __init__.py  harness.py  test_redis_control_state_pin.py
tests/runtime_pin/compose/: compose.pin-spike.yaml  litellm-config.pin-spike.yaml
tests/runtime_pin/compose/fake_upstream/: Dockerfile  server.py
tests/unit/: test_cli.py  test_compose_redis_healthcheck.py  test_environments_docs_only.py  test_failure_modes_metadata.py  test_generate_secrets.py  test_keys.py  test_langfuse_metadata.py  test_llm_client.py  test_metadata.py  test_metadata_schema_parity.py  test_no_shared_rpm_tpm_claims.py  test_proxy_url.py  test_reconcile_cost.py  test_validate_config.py
