[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litellm-langfuse-gateway"
version = "0.1.0"
description = "Self-hosted LiteLLM proxy + PostgreSQL gateway with Langfuse Cloud observability"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  { name = "LiteLLM Langfuse Gateway contributors" },
]
keywords = [
  "litellm",
  "langfuse",
  "llm-gateway",
  "openai-compatible",
  "observability",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "pyyaml>=6.0",
  "httpx>=0.27",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.8",
  "mypy>=1.13",
  "types-PyYAML>=6.0",
]
clients = [
  "openai>=1.50",
]

[project.scripts]
llg = "llg.cli:run"
llg-generate-secrets = "llg.generate_secrets:main"
llg-healthcheck = "llg.healthcheck:main"
llg-validate-config = "llg.validate_config:main"

[project.urls]
Homepage = "https://github.com/Nalakram/litellm-langfuse-gateway"
Documentation = "https://github.com/Nalakram/litellm-langfuse-gateway#readme"
Issues = "https://github.com/Nalakram/litellm-langfuse-gateway/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llg", "scripts"]

[tool.hatch.build.targets.wheel.sources]
"src/llg" = "llg"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "scripts", "examples", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # bugbear
  "UP",  # pyupgrade
  "SIM", # simplify
]
ignore = [
  "E501", # line length handled by formatter preference
]

[tool.ruff.lint.isort]
known-first-party = ["llg", "scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["llg", "scripts"]
mypy_path = "src"
